cmake_minimum_required(VERSION 3.15)
project(Curso)

set(CMAKE_CXX_STANDARD 17)
set(SOURCES
        #Fundamentos/anatomy.cpp
        #Fundamentos/anatomy.h
        #Fundamentos/NameSpace.cpp
        #Fundamentos/NameSpace.h
        #Fundamentos/io.cpp
        #Fundamentos/io.h
        #Fundamentos/Ex1.cpp
        #Fundamentos/Ex1.h
        #Fundamentos/SegundaEstruct.cpp
        #Fundamentos/SegundaEstruct.h
        #Fundamentos/Variaveis.cpp
        #Fundamentos/Variaveis.h
        #main.cpp
)

add_executable(Curso ${SOURCES})

